[gd_scene load_steps=5 format=3 uid="uid://7y062duoyiw7"]

[ext_resource type="Script" uid="uid://7kfa81p6jysv" path="res://mainmenu.gd" id="1_eiy7p"]
[ext_resource type="Texture2D" uid="uid://bt4fnbr4f7j6l" path="res://Images/Backgrounds/MainMenu.png" id="1_i26rj"]
[ext_resource type="FontFile" uid="uid://shfgnripfvo4" path="res://Fonts/gomarice_kinako_mochi.ttf" id="3_h7a2f"]
[ext_resource type="AudioStream" uid="uid://qwx8mr5t71ey" path="res://Music/MainMenu.mp3" id="4_qoqlk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eiy7p")

[node name="MainMenu" type="Sprite2D" parent="."]
position = Vector2(959.24994, 541)
scale = Vector2(6.0046873, 5.9888887)
texture = ExtResource("1_i26rj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = 173.00006
offset_right = -23.0
offset_bottom = 274.00006
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.9999988, 3.1200004)

[node name="CatButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 16
text = "Cat"

[node name="DogButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7a2f")
text = "Dog"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h7a2f")
text = "Options	"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_h7a2f")
text = "Quit to Desktop"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1229.0
offset_top = 970.0
offset_right = 1453.0
offset_bottom = 1055.0

[node name="ReplayIntroButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_h7a2f")
theme_override_font_sizes/font_size = 32
text = "Replay Intro"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qoqlk")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/CatButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CatButton" to="." method="_on_cat_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DogButton" to="." method="_on_dog_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method=" _on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/ReplayIntroButton" to="." method="_on_replay_intro_button_pressed"]
